@@ -12,8 +12,12 @@ into VRAM.
 (jpfouch48) Re-vamped Grapics UI Theme class
 (jpfouch48) Cleaned up theme implementation and theme file
 (jpfouch48) Created icons for buffer display, network status, and stream status
-(sandberg) Implemented support for using the Select button for entering the option menu.
+(sandberg) Implemented support for using the Start button for entering the option menu.
 The triangle button is only used for swapping between the playlist and Shoutcast list.
+(raf) Now user needs to press X or O to go from playlist selection over to entries box.
+(raf) Fixed crash on exit when logging is 80 or higher.
+(raf) Added logging level selection and UI selection in Options menu.
+(raf) Added option to download latest database from SHOUTcast.com (this is usable, but still work in progress. -- the app only lets you do this once a minute, not more often. (Shouldn't have to anyway))
 
 0.36-pre2 (r364)
 (sandberg) Added support for the option menu in the 3D UI.
